Solve wrapped groups title

--- a/components/common/collapsedGroup/collapsedGroup.module.css
+++ b/components/common/collapsedGroup/collapsedGroup.module.css
@@ -9,18 +9,21 @@
 
 .groupHeader
 {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 3fr 1fr;
+  gap: 5px;
   font-size: 1.8rem;
   padding-left: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   padding: 5px;
 }
 
 .groupTitle
 {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto;
   align-items: center;
+  overflow: hidden;
 }
 
 .collapsedBtn
